fix some styling to make the modal look nicer and flex-wrap the chars

--- a/frontend/src/Components/CustomSelectionModal/CustomSelectionModal.scss
+++ b/frontend/src/Components/CustomSelectionModal/CustomSelectionModal.scss
@@ -1,3 +1,5 @@
 .custom-selection-modal {
   top: 25%;
+  text-align: center;
+  max-width: 60%;
 }
